--- a/kliensoldali 4. csoport/5. óra/kliensoldali-webprogramozas-feladattar-vite (1)/kliensoldali-webprogramozas-feladattar-vite/myplaylist-sitebuild-components/package.json
+++ b/kliensoldali 4. csoport/5. óra/kliensoldali-webprogramozas-feladattar-vite (1)/kliensoldali-webprogramozas-feladattar-vite/myplaylist-sitebuild-components/package.json
@@ -8,6 +8,8 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "classnames": "^2.3.2",
+    "fomantic-ui-css": "^2.9.2"
+  }
 }
