--- a/kliensoldali 7. csoport/5-6. óra/kliensoldali-webprogramozas-feladattar-vite/myplaylist-layout-router/package.json
+++ b/kliensoldali 7. csoport/5-6. óra/kliensoldali-webprogramozas-feladattar-vite/myplaylist-layout-router/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   }
 }
