--- a/kliensoldali 3. csoport/5-6-7. óra/kliensoldali-webprogramozas-feladattar-vite/myplaylist-layout-router/package.json
+++ b/kliensoldali 3. csoport/5-6-7. óra/kliensoldali-webprogramozas-feladattar-vite/myplaylist-layout-router/package.json
@@ -12,6 +12,6 @@
     "classnames": "^2.3.2",
     "react-router-dom": "^6.10.0",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^3.0.0-beta.0"
   }
 }
